--- a/src/main/resources/assets/just_enough_plates/lang/de_de.json
+++ b/src/main/resources/assets/just_enough_plates/lang/de_de.json
@@ -4,5 +4,8 @@
   "item.just_enough_plates.golden_plate": "Goldplatte",
   "item.just_enough_plates.diamond_plate": "Diamantplatte",
   "item.just_enough_plates.netherite_plate": "Netheritplatte",
-  "item.just_enough_plates.dirtmond_plate": "Erdmantplatte"
+  "item.just_enough_plates.gilded_netherite_plate": "Vergoldete Netheriteplatte",
+  "item.just_enough_plates.amethyst_plate": "Amethystplatte",
+  "item.just_enough_plates.dirtmond_plate": "Erdmandplatte",
+  "item.just_enough_plates.therrassium_plate": "Therrassiumplatte"
 }
