--- a/src/main/resources/assets/just_enough_plates/lang/de_de.json
+++ b/src/main/resources/assets/just_enough_plates/lang/de_de.json
@@ -1,5 +1,6 @@
 {
 "Plates": "",
+  "item.just_enough_plates.leather_plate": "Lederplatte",
   "item.just_enough_plates.iron_plate": "Eisenplatte",
   "item.just_enough_plates.golden_plate": "Goldplatte",
   "item.just_enough_plates.diamond_plate": "Diamantplatte",
