Added compatibility for MCA Reborn.

--- a/src/main/resources/assets/just_enough_plates/lang/de_de.json
+++ b/src/main/resources/assets/just_enough_plates/lang/de_de.json
@@ -8,5 +8,6 @@
   "item.just_enough_plates.gilded_netherite_plate": "Vergoldete Netheriteplatte",
   "item.just_enough_plates.amethyst_plate": "Amethystplatte",
   "item.just_enough_plates.dirtmond_plate": "Erdmandplatte",
-  "item.just_enough_plates.therrassium_plate": "Therrassiumplatte"
+  "item.just_enough_plates.therrassium_plate": "Therrassiumplatte",
+  "item.just_enough_plates.rose_gold_plate": "Rosengoldplatte"
 }
