--- a/src/main/resources/assets/just_enough_plates/lang/en_us.json
+++ b/src/main/resources/assets/just_enough_plates/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.just_enough_plates.gilded_netherite_plate": "Gilded Netherite Plate",
   "item.just_enough_plates.amethyst_plate": "Amethyst Plate",
   "item.just_enough_plates.dirtmond_plate": "Dirtmond Plate",
-  "item.just_enough_plates.therrassium_plate": "Therrassium Plate"
+  "item.just_enough_plates.therrassium_plate": "Therrassium Plate",
+  "item.just_enough_plates.rose_gold_plate": "Rose Gold Plate"
 }
